--- a/model.ipynb
+++ b/model.ipynb
@@ -374,10 +374,10 @@
     "        \"\"\"sort\"\"\"\n",
     "        x_sort_idx = np.argsort(x_len)[::-1]\n",
     "        #print(\"x_sort_idx\", x_sort_idx)\n",
-    "        x_unsort_idx = torch.LongTensor(np.argsort(x_sort_idx))\n",
+    "        x_unsort_idx = LongTensor(np.argsort(x_sort_idx))\n",
     "        #print(\"x_unsort_idx\", x_unsort_idx)\n",
     "        x_len = np.array(x_len)[x_sort_idx]\n",
-    "        x = x[torch.LongTensor(x_sort_idx.copy())]\n",
+    "        x = x[LongTensor(x_sort_idx.copy())]\n",
     "        #print('x', x)\n",
     "        embedded = self.embedding(x)\n",
     "        #print(\"embedded\", embedded.shape)\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
     "        #self.encoder2 = encoder2\n",
     "        \n",
     "        self.fc1 = nn.Linear(hidden_size*4, hidden_size)  \n",
-    "        self.sigmod = nn.Sigmoid()\n",
+    "        self.relu = nn.ReLU()\n",
     "        self.fc2 = nn.Linear(hidden_size, 2)\n",
     "        \n",
     "    def init_weight(self):\n",
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,11 +468,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Module.parameters of Model(\n",
+       "  (encoder1): EncoderV(\n",
+       "    (embedding): Embedding(1720, 128)\n",
+       "    (gru): GRU(128, 256, num_layers=2, batch_first=True, bidirectional=True)\n",
+       "  )\n",
+       "  (fc1): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "  (relu): ReLU()\n",
+       "  (fc2): Linear(in_features=256, out_features=2, bias=True)\n",
+       ")>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1720, 128])\n",
+      "torch.Size([768, 128])\n",
+      "torch.Size([768, 256])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768, 128])\n",
+      "torch.Size([768, 256])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768, 512])\n",
+      "torch.Size([768, 256])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768, 512])\n",
+      "torch.Size([768, 256])\n",
+      "torch.Size([768])\n",
+      "torch.Size([768])\n",
+      "torch.Size([256, 1024])\n",
+      "torch.Size([256])\n",
+      "torch.Size([2, 256])\n",
+      "torch.Size([2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in list(model.parameters()):\n",
+    "    if i.requires_grad:\n",
+    "        print(i.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(model.parameters()).shape"
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2258690"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_parameters(model)"
    ]
   },
   {
